fix :: 쿼즈 리스트 조회 픽스