@@ -4,13 +4,13 @@ import JavaProject.Dayoung.domain.area.domain.Area;
 import JavaProject.Dayoung.domain.quiz.domain.type.Level;
 import JavaProject.Dayoung.domain.quiz.presentation.dto.request.QuizFilter;
 import JavaProject.Dayoung.domain.quiz.presentation.dto.response.QuizListResponse;
+import JavaProject.Dayoung.domain.quiz.presentation.dto.response.QuizListResponse.QuizResponse;
 import JavaProject.Dayoung.domain.quiz.repository.port.QuizPort;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,7 +19,7 @@ public class QueryQuizListService {
 
     private final QuizPort quizPort;
 
-    public List<QuizListResponse> execute(String title, List<Area> area, List<Level> level, boolean isSolved, int page) {
+    public QuizListResponse execute(String title, List<Area> area, List<Level> level, boolean isSolved, int page) {
 
         QuizFilter filter = QuizFilter.builder()
             .title(title)
@@ -30,9 +30,10 @@ public class QueryQuizListService {
             .limit(15)
             .build();
 
-        return quizPort.queryAllByFilter(filter)
-            .stream()
-            .map(QuizListResponse::new)
-            .collect(Collectors.toList());
+        List<QuizResponse> quizList = quizPort.queryAllByFilter(filter).stream()
+            .map(QuizListResponse.QuizResponse::from)
+            .toList();
+
+        return new QuizListResponse(quizList);
     }
 }
